change AppImage fileName changed check module add App Language English -> Korea

--- a/party_sub/res/values/strings.xml
+++ b/party_sub/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">party_sub</string>
+    <string name="app_name">드래곤파티 QickLoginTool</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
